# ESPSynth_basic_oscillator

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  sdkconfig
components/Esp_menu/: CMakeLists.txt  Esp_menu.c  Kconfig.projbuild  generate_menu.py  menu.json  user_actions.c  user_graphic.h
components/Esp_menu/templates/: menu.c.j2
main/: CMakeLists.txt  main.c  waveform_gen.c  waveform_gen.h
main/user_menu/: menu.json  user_actions.c  user_actions.h
