set(srcs
    "main.c"
    "waveform_gen.c"
)
idf_component_register(
    SRCS "${srcs}"
    INCLUDE_DIRS
        "."
    REQUIRES
        Esp_menu
        module_i2c_proto
        common_definitions
    PRIV_REQUIRES
        lvgl
        esp_lvgl_port
        espressif__knob
        espressif__button
        nvs_flash
        driver
)